UV Editor regression: stitching preview is gone #83547

Closed
opened 2020-12-08 12:27:58 +01:00 by Philipp Oeser · 8 comments
Member

System Information
Operating system: Linux-5.9.11-200.fc33.x86_64-x86_64-with-fedora-33-Thirty_Three 64 Bits
Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 455.45.01

Blender Version
Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-12-08 08:48, hash: 922b8abea5
Worked: 2.91
Caused by 278011e44d

Short description of error
UV Editor: stitching preview is gone

Exact steps for others to reproduce the error
UV_stitch_preview_gone.blend

  • Open .blend
  • In the UV Editor, press {key Alt V} (or alternatively: UV > Stitch from the menu)

UV_stitch_preview_gone.webm

**System Information** Operating system: Linux-5.9.11-200.fc33.x86_64-x86_64-with-fedora-33-Thirty_Three 64 Bits Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 455.45.01 **Blender Version** Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-12-08 08:48, hash: `922b8abea5` Worked: 2.91 Caused by 278011e44d **Short description of error** UV Editor: stitching preview is gone **Exact steps for others to reproduce the error** [UV_stitch_preview_gone.blend](https://archive.blender.org/developer/F9494005/UV_stitch_preview_gone.blend) - Open .blend - In the UV Editor, press {key Alt V} (or alternatively: `UV` > `Stitch` from the menu) [UV_stitch_preview_gone.webm](https://archive.blender.org/developer/F9494008/UV_stitch_preview_gone.webm)
Author
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Jeroen Bakker was assigned by Philipp Oeser 2020-12-08 12:28:57 +01:00
Author
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Author
Member

@Jeroen-Bakker: mind checking?

@Jeroen-Bakker: mind checking?
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Yes sure, is it also missing in 2.91? Seems like something I wasn't aware of that it existed.

borg :)

Yes sure, is it also missing in 2.91? Seems like something I wasn't aware of that it existed. borg :)
Author
Member

is it also missing in 2.91?

Nope, see report description (this is bisected already, Worked: 2.91)

> is it also missing in 2.91? Nope, see report description (this is bisected already, Worked: 2.91)

This issue was referenced by 8da62a9a86

This issue was referenced by 8da62a9a86d98676ff0bc4cffd389dcbed7e3071
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#83547
No description provided.