Fix T83547: UV Editor stitching preview is gone.

Issue was related that the draw manager didn't invoked the draw handlers
for image editors.